--- a/src/main/webapp/Resanet.html
+++ b/src/main/webapp/Resanet.html
@@ -1,12 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html style="overflow-x:hidden;">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 
     <title>Resanet</title>
 
     <script type="text/javascript" language="javascript" src="Resanet/Resanet.nocache.js"></script>
 
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css"/>
 
 </head>
 <body>
@@ -20,6 +20,5 @@
         application to display correctly.
     </div>
 </noscript>
-
 </body>
 </html>
